force-app/main/default/objects/Calendarific_Custom_Setting__c/Calendarific_Custom_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Calendarific Custom Setting</label>
</CustomObject>