force-app/main/default/objects/Calendarific_Custom_Setting__c/fields/Calendarific_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Calendarific_API_Key__c</fullName>
    <label>Calendarific API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>