force-app/main/default/objects/Calendarific_Custom_Setting__c/fields/Calendarific_API_Url__c.field-meta.xml
<CustomField>
    <fullName>Calendarific_API_Url__c</fullName>
    <label>Calendarific API Url</label>
    <type>Url</type>
</CustomField>