force-app/main/default/objects/Calendarific_Custom_Setting__c/fields/Calendarific_Hash_Key__c.field-meta.xml
<CustomField>
    <fullName>Calendarific_Hash_Key__c</fullName>
    <label>Calendarific Hash Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>