force-app/main/default/objects/Calendarific_Custom_Setting__c/listViews/Custom_Setting.listView-meta.xml
<ListView>
    <fullName>Custom_Setting</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>NAME</columns>
    <columns>Calendarific_API_Key__c</columns>
    <columns>Calendarific_API_Url__c</columns>
    <columns>Calendarific_Hash_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom Setting</label>
</ListView>